# devcontainer-poetry-example

./: README.md
hello-world/: .pylintrc  pyproject.toml
hello-world/.devcontainer/: Dockerfile  devcontainer.json
hello-world/hello_world/: app.py  hello.py
hello-world/tests/: test_hello_world.py
poetry-demo/: pyproject.toml
